update to slash comamnd

--- a/env.template
+++ b/env.template
@@ -3,3 +3,4 @@ DISCORD_TOKEN=<Your discord bot tokern>
 SERVER=<serverip or url>
 PORT=5029
 INTERVAL=<update interval in ms>
+TEST_GUILD=<the server where you test your bots>
