fix if only added or only removed

--- a/env.template
+++ b/env.template
@@ -4,3 +4,4 @@ SERVER=<serverip or url>
 PORT=5029
 INTERVAL=<update interval in ms>
 TEST_GUILD=<the server where you test your bots>
+UPDATE_CHANNEL=<the text channel for updates>
