--- a/env.template
+++ b/env.template
@@ -1,7 +1,7 @@
-#Copy this file to .env and fill in the values
-DISCORD_TOKEN=<Your discord bot tokern>
-SERVER=<serverip or url>
+DISCORD_TOKEN=
+SERVER="127.0.0.1"
 PORT=5029
-INTERVAL=<update interval in ms>
-TEST_GUILD=<the server where you test your bots>
-UPDATE_CHANNEL=<the text channel for updates>
+INTERVAL=1000
+TEST_GUILD=
+UPDATE_CHANNEL=
+EVENT_CHANNEL=
