--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "random": "^3.0.6"
   }
 }
