--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
     "fs": "0.0.1-security",
-    "random": "^3.0.6"
+    "random": "^3.0.6",
+    "sqlite3": "^5.0.2"
   }
 }
