--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "discordbot for server status of formula bun",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "node main.js"
   },
@@ -21,6 +22,8 @@
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2",
     "fs": "0.0.1-security",
-    "random": "^3.0.6"
+    "random": "^3.0.6",
+    "sqlite3": "^5.0.2",
+    "srb2kartjs": "^2.1.2"
   }
 }
