--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "node-fetch": "^3.2.4",
     "random": "^3.0.6",
     "sqlite3": "^4.2.0",
-    "srb2kartjs": "^2.2.9"
+    "srb2kartjs": "^2.2.9",
+    "minimist": ">=1.2.6"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
