--- a/env.template
+++ b/env.template
@@ -1,7 +1,7 @@
-DISCORD_TOKEN=
-SERVER="127.0.0.1"
-PORT=5029
-INTERVAL=1000
-TEST_GUILD=
-UPDATE_CHANNEL=
-EVENT_CHANNEL=
+discord_token=
+api_server=
+website="127.0.0.1"
+kart_port=5029
+discord_update_interval=1000
+
+test_discord_guild=
