--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   },
   "homepage": "https://github.com/formulabun/formulabun-discordbot#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.13.0",
     "better-sqlite3": "^7.4.5",
+    "clean": "^4.0.2",
     "cross-env": "^7.0.3",
-    "discord.js": "^13.6.0",
+    "discord.js": "^14.0.0",
     "dotenv": "^9.0.2",
+    "minimist": ">=1.2.6",
     "node-fetch": "^3.2.4",
     "random": "^3.0.6",
     "sqlite3": "^4.2.0",
-    "srb2kartjs": "^2.2.9",
-    "minimist": ">=1.2.6"
+    "srb2kartjs": "^2.2.9"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
